modifica contenuto, modifica e reset password